jenkins_practice_pipelines/jenkins/minikub.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
  namespace: test-ingress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  namespace: test-ingress
  name: nginx-service
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30081  # Exposes it on your server's IP:30081
  type: NodePort

#  imp note - if you want to deploy application with ingress just makes some changes above file in deploymnet and service
#  replace it with httpd  then apply both.


# http://localhost/nginx
# httpd://localhost/httpd
